// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test TestInfo should correctly when state is $text 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;

exports[`test TestInfo should correctly when state is $text 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
      id="ip-test-info"
    >
      check_ip... invalid_ipinvalid_format
    </div>
  </div>
</div>
`;

exports[`test TestInfo should correctly when state is $text 3`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
      id="ip-test-info"
    >
      check_ip... 
    </div>
  </div>
</div>
`;

exports[`test TestInfo should correctly when state is $text 4`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
      id="ip-test-info"
    >
      check_ip... unreachable
    </div>
  </div>
</div>
`;

exports[`test TestInfo should correctly when state is $text 5`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
      id="ip-test-info"
    >
      check_ip... OK ✅
    </div>
    <div
      class="info"
      id="machine-test-info"
    >
      check_connection... 10s
    </div>
  </div>
</div>
`;

exports[`test TestInfo should correctly when state is $text 6`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
      id="ip-test-info"
    >
      check_ip... OK ✅
    </div>
    <div
      class="info"
      id="machine-test-info"
    >
      check_connection... OK ✅
    </div>
    <div
      class="info"
    >
      check_firmware... 4.0.0
    </div>
    <div
      class="info"
    >
      check_camera... 
    </div>
  </div>
</div>
`;

exports[`test TestInfo should correctly when state is $text 7`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
      id="ip-test-info"
    >
      check_ip... OK ✅
    </div>
    <div
      class="info"
      id="machine-test-info"
    >
      check_connection... OK ✅
    </div>
    <div
      class="info"
    >
      check_firmware... 4.0.0
    </div>
    <div
      class="info"
    >
      check_camera... Fail
    </div>
  </div>
</div>
`;

exports[`test TestInfo should correctly when state is $text 8`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
      id="ip-test-info"
    >
      check_ip... OK ✅
    </div>
    <div
      class="info"
      id="machine-test-info"
    >
      check_connection... OK ✅
    </div>
    <div
      class="info"
    >
      check_firmware... 4.0.0
    </div>
    <div
      class="info"
    >
      check_camera... OK ✅
    </div>
    <div
      class="info"
    >
      succeeded_message
    </div>
  </div>
</div>
`;
